2009-03-03  Evi Vanoost  <vanooste@rcbi.rochester.edu>

	* general/logon_ok.php: Minor edit in language and colors for warning
	
	* include/functions_reporting.php: Changed get_group_stats for better
	queries based on query debugging.
	
	* include/functions_db.php: Change get_server_info for better queries
	based on query debugging. Documentation updates and function updates
	
	* operation/agentes/tactical.php: Removed a row with duplicate info
	
	* operation/reporting/reporting_viewer.php, 
	operation/reporting/reporting_xml.php, include/functions_modules.php,
	godmode/agentes/module_manager_editor.php:
	Function renaming.
	
2009-03-03  Esteban Sanchez  <estebans@artica.es>

	* godmode/alerts/configure_alert_template.php: Add id to separator
	div.

	* include/styles/pandora.css, include/styles/pandora_width.css: Added
	style to separator div. Fixes a UI breakage.

2009-03-03  Esteban Sanchez  <estebans@artica.es>

	* general/main_menu.php: Operation and godmode menus files includes
	now the dependant files.

	* godmode/agentes/modificar_agente.php: Removed unnecessary
	require()
	
	* godmode/alerts/alert_list.php: Avoid notice for undefined index when
	calling max(). Added option to delete the template.

	* godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php: Fixed field2_recovery and
	field3_recovery updating.

	* operation/menu.php, godmode/menu.php: Require functions_menu.php.

	* include/config_process.php: Updated build version.

	* include/functions.php: Keep time in a static variable on
	get_system_time().

	* include/functions_db.php: Now a custom operation can be passed to
	format_array_to_where_clause_sql() if the field key is numeric.

	* include/functions_reporting.php: Return float value on
	get_agentmodule_sla(). Added required files.

	* include/functions_ui.php: Show template name on format_alert_row().
	Style correction.

	* operation/agentes/export_csv.php: Style correction.
	